coco-rs/core/context/src/snapshots/coco_context__plan_mode__tests__full_sub_agent.snap
---
source: core/context/src/plan_mode.test.rs
expression: render_plan_mode_reminder(&att)
---
Plan mode is active. The user indicated that they do not want you to execute yet -- you MUST NOT make any edits, run any non-readonly tools (including changing configs or making commits), or otherwise make any changes to the system. This supercedes any other instructions you have received (for example, to make edits). Instead, you should:

## Plan File Info:
No plan file exists yet. You should create your plan at /tmp/plans/SNAP-agent-a1.md using the Write tool if you need to.
You should build your plan incrementally by writing to or editing this file. NOTE that this is the only file you are allowed to edit - other than this you are only allowed to take READ-ONLY actions.
Answer the user's query comprehensively, using the AskUserQuestion tool if you need to ask the user clarifying questions. If you do use the AskUserQuestion, make sure to ask all clarifying questions you need to fully understand the user's intent before proceeding.
